--- a/app/src/main/res/layout/left_row.xml
+++ b/app/src/main/res/layout/left_row.xml
@@ -24,6 +24,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/selectionImage"
             android:src="@drawable/wifi"
             android:layout_width="40dp"
             android:layout_height="40dp"
