--- a/app/src/main/res/layout/right_row.xml
+++ b/app/src/main/res/layout/right_row.xml
@@ -75,6 +75,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/selectionImage"
             android:src="@drawable/wifi"
             android:layout_width="40dp"
             android:layout_height="40dp"
