--- a/app/src/main/res/layout/left_row.xml
+++ b/app/src/main/res/layout/left_row.xml
@@ -13,9 +13,8 @@
     android:orientation="vertical"
     android:paddingLeft="3.0dip"
     android:paddingRight="3.0dip"
-    android:layout_marginLeft="3px"
-    android:layout_marginRight="3px"
-    android:background="@drawable/row_bg">
+
+    >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -86,13 +85,12 @@
             </LinearLayout>
 
         </LinearLayout>
-    
-	
-	<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="1px"
-    android:background="#000000"
-    />
+
+
+
 </LinearLayout>
-</LinearLayout>
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:background="@android:color/holo_blue_bright"></LinearLayout>
+    </LinearLayout>
     </LinearLayout>
