--- a/app/src/main/res/layout/right_row.xml
+++ b/app/src/main/res/layout/right_row.xml
@@ -13,10 +13,8 @@
     android:baselineAligned="true"
     android:paddingLeft="3.0dip"
     android:paddingRight="3.0dip"
-    android:layout_marginLeft="3px"
-    android:layout_marginRight="3px"
     android:orientation="horizontal"
-    android:background="@drawable/row_bg">
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -88,7 +86,7 @@
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="1px"
-    android:background="#000000"></LinearLayout>
+    android:background="@android:color/holo_blue_bright"></LinearLayout>
 
 
 
