--- a/app/src/main/res/layout/right_row.xml
+++ b/app/src/main/res/layout/right_row.xml
@@ -86,7 +86,7 @@
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="1px"
-    android:background="@android:color/holo_blue_bright"></LinearLayout>
+    android:background="#ddd"></LinearLayout>
 
 
 
