custom view net dialog

--- a/app/src/main/res/layout/viewdialog.xml
+++ b/app/src/main/res/layout/viewdialog.xml
@@ -1,51 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <TextView android:id="@+id/view_alias"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:paddingBottom="12dip"
+        android:gravity="center_horizontal"
+        />
+
+    <TextView android:id="@+id/view_ssid"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#555"
+        android:paddingBottom="12dip"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/view_alias"
+        />
+
+    <TextView android:id="@+id/view_keymgmt"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#555"
+        android:paddingBottom="12dip"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/view_ssid"
+        />
+
+    <TextView android:id="@+id/view_psk"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#555"
+        android:paddingBottom="12dip"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/view_keymgmt"
+        />
+
+
+    <Button
+        android:id="@+id/view_ok"
+        android:layout_width="75dip"
+        android:layout_height="wrap_content"
+        android:text="@string/ok"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/view_psk"
+        android:layout_centerHorizontal="true"
+        />
+
+</RelativeLayout>
+    <!--
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/layout_root"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:padding="10dp"
-              android:gravity="center"
+              android:gravity="center_horizontal"
               >
     
     
     <TextView android:id="@+id/view_alias"
-        android:text="quelque part"
+        android:text="maison"
               android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:textColor="#FFF"
+              android:layout_height="fill_parent"
               android:textStyle="bold"
               android:paddingBottom="10dip"
+        android:gravity="center_horizontal"
               />
     
     <TextView android:id="@+id/view_ssid"
-        android:text="Livebox-F42D"
+        android:text="Livebox-2F62"
         		android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="fill_parent"
               android:textColor="#BBB"
               android:paddingBottom="10dip"
+        android:gravity="center_horizontal"
               />
     
     <TextView android:id="@+id/view_keymgmt"
         		android:text="WPA-PSK"
         		android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="fill_parent"
               android:textColor="#BBB"
               android:paddingBottom="10dip"
+        android:gravity="center_horizontal"
               />
     
     <TextView android:id="@+id/view_psk"
-        		android:text="1234123412341234"
+        		android:text="1234123412341234666"
         		android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="fill_parent"
               android:textColor="#BBB"
               android:paddingBottom="10dip"
+        android:gravity="center_horizontal"
               />
-    
+    
+
     <Button
         android:id="@+id/view_ok"
         android:layout_width="75dip"
         android:layout_height="wrap_content"
-        android:text="@string/ok" />
+        android:text="@string/ok"
+        android:gravity="center_horizontal"
+        />
 
-</LinearLayout>
+</LinearLayout>-->
