--- a/WBR/src/main/res/layout/viewdialog.xml
+++ b/WBR/src/main/res/layout/viewdialog.xml
@@ -115,13 +115,16 @@
         android:layout_toRightOf="@+id/view_ok" /> -->
 
 
+
+
     <Button
         android:layout_below="@id/view_psk"
         android:id="@+id/view_restore"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
 
         android:background="?android:attr/selectableItemBackground"
         android:text="restauration"
@@ -130,7 +133,7 @@
         android:id="@+id/view_button_bar"
         android:layout_width="1dip"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="4dip"
         android:layout_marginTop="4dip"
@@ -140,12 +143,14 @@
         android:layout_centerHorizontal="true"/>
     <Button
         android:id="@+id/view_ok"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:background="?android:attr/selectableItemBackground"
         android:text="@android:string/ok"
+        
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/view_button_bar"
         />
@@ -153,3 +158,4 @@
 
 
 </RelativeLayout>
+
