--- a/WBR/src/main/res/layout/viewdialog.xml
+++ b/WBR/src/main/res/layout/viewdialog.xml
@@ -116,6 +116,12 @@
 
 
 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:divider="?android:attr/dividerHorizontal"
+          android:orientation="vertical"
+          android:showDividers="middle">
 
     <Button
         android:layout_below="@id/view_psk"
@@ -155,7 +161,7 @@
         android:layout_toRightOf="@id/view_button_bar"
         />
 
-
+</LinearLayout>
 
 </RelativeLayout>
 
