--- a/WBR/src/main/res/layout/viewdialog.xml
+++ b/WBR/src/main/res/layout/viewdialog.xml
@@ -125,22 +125,21 @@
           android:showDividers="middle">
 
     <Button
-        android:layout_below="@id/view_psk"
         android:id="@+id/view_restore"
         android:layout_width="0dp"
         android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="false"
-
+        android:layout_alignParentTop="true"
         android:background="?android:attr/selectableItemBackground"
-        android:text="restauration"
+        android:text="@string/lbl_restore"
+        android:layout_alignParentTop="true"/>
         android:layout_alignParentBottom="true"/>
     <View
         android:id="@+id/view_button_bar"
         android:layout_width="1dip"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="false"
+        android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="4dip"
         android:layout_marginTop="4dip"
