--- a/WBR/src/main/res/values/colors.xml
+++ b/WBR/src/main/res/values/colors.xml
@@ -4,4 +4,16 @@
    <color name="odd_line">#FF606060</color>
     <color name="selected_even_line">@android:color/holo_blue_light</color>
     <color name="selected_odd_line">@android:color/holo_blue_dark</color>
+
+    <color name="dialog_message_text">#333333</color>
+    <color name="dialog_title_text">#f3a71e</color>
+    <color name="dialog_title_separator">#f3a71e</color>
+    <color name="dialog_button_text">#333333</color>
+    <color name="dialog_button_normal">@android:color/transparent</color>
+    <color name="dialog_button_pressed">#99f3a71e</color> <!-- 60 % opacity -->
+    <color name="dialog_button_focused">#4Cf3a71e</color> <!-- 30 % opacity -->
+    <color name="dialog_button_separator">#25000000</color> <!-- 7% opacity -->
+    <color name="background">#FFA500</color>
+
+
 </resources>
