--- a/WBR/src/main/res/values/style.xml
+++ b/WBR/src/main/res/values/style.xml
@@ -19,4 +19,18 @@
         <item name="android:layout_marginBottom">5dip</item>
     </style>
 
+
+    <style name="DialogStyleLight.Custom">
+        <!-- anything can be left out: -->
+        <item name="titleTextColor">@color/dialog_title_text</item>
+        <item name="titleSeparatorColor">@color/dialog_title_separator</item>
+        <item name="messageTextColor">@color/dialog_message_text</item>
+        <item name="buttonTextColor">@color/dialog_button_text</item>
+        <item name="buttonSeparatorColor">@color/dialog_button_separator</item>
+        <item name="buttonBackgroundColorNormal">@color/dialog_button_normal</item>
+        <item name="buttonBackgroundColorPressed">@color/dialog_button_pressed</item>
+        <item name="buttonBackgroundColorFocused">@color/dialog_button_focused</item>
+        <!--item name="dialogBackground">@drawable/dialog_background</item-->
+    </style>
+
 </resources>
